<resources>
    <string name="app_name" translatable="false">OdooJsonRpc</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="ok">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="retry">Retry</string>
    <string name="fatal_error">Fatal Error</string>
    <string name="generic_error">Something went wrong!</string>
    <string name="operation_failed">Operation Failed</string>
    <string name="try_again">Try Again</string>
    <string name="login_again">Login Again</string>
    <string name="quit">Quit</string>
    <string name="server_request_error" translatable="false">%d - %s</string>
    <string name="odoo_error">Server Error Occurred</string>
    <string name="exit">Exit</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_customer">Customers</string>
    <string name="action_supplier">Suppliers</string>
    <string name="action_company">Company</string>
    <string name="action_profile">Profile</string>
    <string name="action_add_account">Add account</string>
    <string name="action_manage_account">Manage Accounts</string>
    <string name="action_login_other_account">Manage Other Accounts</string>
    <string name="manage_account_remove_error">Failed to remove account</string>
    <string name="profile_full_name">Name:- N/A</string>
    <string name="profile_email">Email:- N/A</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_exit">Press again to exit</string>
    <string name="login_protocol">Protocol</string>
    <string name="login_host_hint">Host (e.g. 192.168.0.1:8069)</string>
    <string name="login_host_error">Please, type host URL</string>
    <string name="login_host_error2">Please, type valid host URL</string>
    <string name="login_host_error1">Please, Remove leading http:// or https:// from host URL</string>
    <string name="login_check_odoo_version">Connect to Server</string>
    <string name="login_checking_odoo_version">Connecting to Server&#8230;</string>
    <string name="login_server_success">Odoo version %s is compatible</string>
    <string name="login_server_error">Odoo version %s is incompatible</string>
    <string name="login_username_hint">Username (e.g. user@odoo.com)</string>
    <string name="login_username_error">Please, Type username</string>
    <string name="login_password_hint">Password</string>
    <string name="login_password_error">Please, Type password</string>
    <string name="login_database_hint">Database</string>
    <string name="login_forgot_password">Forgot Password?</string>
    <string name="login_database_error">Please, Select database</string>
    <string name="login_credential_error">Wrong login/password</string>
    <string name="login_submit">Login</string>
    <string name="login_progress">Authenticating&#8230;</string>
    <string name="login_success">Creating user account&#8230;</string>
    <string name="login_create_account_error">Something went wrong creating user account</string>
    <string name="error_report">Report</string>
    <string name="forgot_pass_email_hint">Enter your registered email address</string>
    <string name="forgot_pass_submit">Send reset password link</string>
    <string name="error_active_user">There is no active user found!</string>
    <string name="profile_name">Name</string>
    <string name="profile_login">Login</string>
    <string name="profile_server_url">Server URL</string>
    <string name="profile_database">Database</string>
    <string name="profile_odoo_version">Odoo Version</string>
    <string name="profile_timezone">Timezone</string>
    <string name="language_system_default">System</string>
    <string name="language_code_system_default" translatable="false">system</string>
    <string name="preference_build_category">Version Info</string>
    <string name="preference_build_key" translatable="false">build</string>
    <string name="preference_build_title">Build Version</string>
    <string name="preference_build_summary">Version %s</string>
    <string name="preference_language_key" translatable="false">language</string>
    <string name="preference_language_title">Language</string>
    <string name="preference_language_summary">Select Your Language</string>
    <string name="preference_logfile_key" translatable="false">logfile</string>
    <string name="preference_logfile_title">Share Application Logfile</string>
    <string name="preference_logfile">Application Logfile</string>
    <string name="preference_about_category">About</string>
    <string name="preference_organization_key" translatable="false">organization</string>
    <string name="preference_organization_title">Developed By</string>
    <string name="preference_privacy_policy_key" translatable="false">privacy</string>
    <string name="preference_privacy_policy_title">Privacy Policy</string>
    <string name="preference_contact_key" translatable="false">contact</string>
    <string name="preference_contact_title">Contact Us</string>
    <string name="preference_account_category">Account</string>
    <string name="preference_logout_key" translatable="false">logout</string>
    <string name="preference_logout_title">Logout</string>
    <string name="preference_prompt_email_intent">Send email using</string>
    <string name="preference_error_email_intent">There\'s no application found to open email links</string>
    <string name="recycler_empty_title">Your records appear here</string>
    <string name="recycler_error_retry">Retry</string>
    <string name="report_feedback">Feedback:</string>

    <!-- Network Connection Strings BEGIN -->
    <string name="network_alert_title">Internet Connection Disabled</string>
    <string name="network_alert_message">Turn on Internet Connection</string>
    <string name="create_account_error" translatable="false">%s was unable to create account due to %s. Please, Logout
        then Login Again
    </string>
    <string name="no_channel">There\'s no channel found in the system</string>
    <!-- Network Connection Strings END -->

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
</resources>
