<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <android.support.v7.preference.PreferenceCategory android:title="@string/preference_build_category">
        <android.support.v7.preference.Preference
            android:key="@string/preference_build_key"
            android:title="@string/preference_build_title" />
    </android.support.v7.preference.PreferenceCategory>
    <android.support.v7.preference.PreferenceCategory android:title="@string/preference_about_category">
        <android.support.v7.preference.Preference
            android:key="@string/preference_organization_key"
            android:summary="@string/preference_organization_summary"
            android:title="@string/preference_organization_title" />
        <android.support.v7.preference.Preference
            android:key="@string/preference_privacy_policy_key"
            android:title="@string/preference_privacy_policy_title" />
        <android.support.v7.preference.Preference
            android:key="@string/preference_contact_key"
            android:summary="@string/preference_contact_summary"
            android:title="@string/preference_contact_title" />
    </android.support.v7.preference.PreferenceCategory>
</android.support.v7.preference.PreferenceScreen>