<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="io.gripxtech.odoojsonrpcclient.UtilsKt" />

        <variable
            name="user"
            type="io.gripxtech.odoojsonrpcclient.core.OdooUser" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".core.authenticator.ProfileActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/app_bar_height"
            android:theme="@style/AppTheme.AppBarOverlay">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/ctl"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:contentScrim="?attr/colorPrimary"
                app:layout_scrollFlags="exitUntilCollapsed|scroll|snap"
                app:title="@{user.name}">

                <ImageView
                    android:id="@+id/ivProfile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:image_small="@{UtilsKt.trimFalse(user.imageSmall)}"
                    app:layout_collapseMode="parallax"
                    app:name="@{UtilsKt.trimFalse(user.name)}"
                    tools:ignore="ContentDescription" />

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/AppTheme.PopupOverlay" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/default_linear_layout_padding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/colorAccent"
                    app:textAllCaps="true" />

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{user.name}"
                    tools:text="Administrator" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/default_linear_layout_padding" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_login"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/colorAccent"
                    app:textAllCaps="true" />

                <TextView
                    android:id="@+id/tvLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{user.login}"
                    tools:text="admin" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/default_linear_layout_padding" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_server_url"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/colorAccent"
                    app:textAllCaps="true" />

                <TextView
                    android:id="@+id/tvServerURL"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{user.host}"
                    tools:text="http://192.168.0.1:8069" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/default_linear_layout_padding" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_database"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/colorAccent"
                    app:textAllCaps="true" />

                <TextView
                    android:id="@+id/tvDatabase"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{user.database}"
                    tools:text="db_v10" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/default_linear_layout_padding" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_odoo_version"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/colorAccent"
                    app:textAllCaps="true" />

                <TextView
                    android:id="@+id/tvVersion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{user.serverVersion}"
                    tools:text="10.0" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/default_linear_layout_padding" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_timezone"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/colorAccent"
                    app:textAllCaps="true" />

                <TextView
                    android:id="@+id/tvTimezone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{user.timezone}"
                    tools:text="Europe/Brussels" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/default_linear_layout_padding" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
